chore: moved request to post
